# CppTransformerML

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
modules/: nnlayers.cpp  nnlayers.h
